automatically restart GDM after switching sessions

--- a/usr/share/applications/switch_user_session.desktop
+++ b/usr/share/applications/switch_user_session.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Type=Application
 Name=Switch session
-Exec=switch-user-session
+Exec=bash -c 'echo "switch-user-session" | at now'
 Icon=system-log-out
