mangoapp service for the Steam overlays

--- a/usr/lib/systemd/user/steam-ui.service
+++ b/usr/lib/systemd/user/steam-ui.service
@@ -2,11 +2,9 @@
 Description=Steam Big Picture user interface
 Before=steam-session.target
 PartOf=steam-session.target
-Requires=gamescope-compositor.service
-After=gamescope-compositor.service
-Wants=ibusd.service
+Requires=mangoapp.service
+After=mangoapp.service
 
 [Service]
-ExecStartPre=/usr/bin/await-gamescope-ready
 ExecStart=/usr/bin/steam -skipintro -gamepadui -steampal -steamos3 -steamdeck
 Type=exec
